Decrease z-index of fixed element from 1000 to 800

--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ nav{
     top:0;
     left:0;
 
-    z-index:1000;
+    z-index:800;
 
     background:rgba(25,35,30,.45);
 
